<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SwissInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:orientation="vertical"
        android:padding="8dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:text="@string/welcomesitxt"
        android:textAlignment="center"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#00BCD4"
        android:text="@string/infotxtabtswiss"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:text="@string/firstinfoabtswiss"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:text="@string/secondinfoabtswiss"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:text="@string/thirdinfoabtswiss"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="#4CAF50"
            android:text="@string/fourthinfoabtswiss"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="#8BC34A"
            android:textAlignment="center"
            android:text="@string/fifthinfoabtswiss"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="#CDDC39"
            android:text="@string/sixthinfoabtswiss"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:text="@string/seventhinfoabtswiss"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            android:text="@string/eighthinfoabtswiss"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:text="@string/ninethinfoabtswiss"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:text="@string/backtomainbtntxt"/>
    </LinearLayout>
</ScrollView>