<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp"
    android:orientation="vertical"
    android:dividerHeight="1dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#FF0000"
        android:text="@string/welcomemaintxt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSwissInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/mainbtnsitxt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSwissRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/mainbtnrstxt" />

</LinearLayout>